[tool.poetry]
name = "repl_python3_hex-color-app-project"
version = "0.1.0"
description = ""
authors = ["JeremyHer <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
PySimpleGUI = "^4.55.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
